--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 body {
     background-color: black;
     color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 @media screen and (prefers-color-scheme: light) {
     body {
-        background-color: white;
+        background-color: #ffffff;
         color: black;
     }
 }
